--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.27.0
-pandas==2.0.3
-numpy==1.24.3
-yfinance==0.2.28
-scikit-learn==1.3.0
-matplotlib==3.7.2
-plotly==5.16.1
+matplotlib>=3.10.3
+numpy>=2.2.5
+pandas>=2.2.3
+plotly>=6.1.0
+scikit-learn>=1.6.1
+streamlit>=1.45.1
+yfinance>=0.2.61
