--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 matplotlib>=3.10.3
-numpy==1.25.2
+numpy>=1.26.0
 pandas>=2.2.3
 plotly>=6.1.0
 scikit-learn>=1.6.1
 streamlit>=1.45.1
 yfinance>=0.2.61
+
+
