--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-matplotlib>=3.10.3
-numpy>=1.26.0
-pandas>=2.2.3
-plotly>=6.1.0
-scikit-learn>=1.6.1
-streamlit>=1.45.1
-yfinance>=0.2.61
-
-
+streamlit==1.35.0
+numpy==2.2.5
+pandas==2.2.3
+matplotlib==3.10.3
+altair==5.5.0
+plotly==6.1.0
+pydeck==0.9.1
+beautifulsoup4==4.13.4
+requests==2.31.0
+scikit-learn==1.4.2
+joblib==1.5.0
+peewee==3.18.1
+pyarrow==20.0.0
+protobuf==6.31.0
+jinja2==3.1.6
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pygments==2.19.1
+rich==14.0.0
