--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-streamlit==1.35.0
-numpy==1.26.4
-pandas==2.2.3
-matplotlib==3.10.3
-altair==5.5.0
-plotly==6.1.0
-pydeck==0.9.1
-beautifulsoup4==4.13.4
-requests==2.31.0
-scikit-learn==1.4.2
-joblib==1.5.0
-peewee==3.18.1
-pyarrow==12.0.1
-protobuf==3.20.3
-jinja2==3.1.6
-markdown-it-py==3.0.0
-mdurl==0.1.2
-pygments==2.19.1
-rich==13.7.1
+streamlit>=1.35.0
+numpy~=1.26.0
+pandas>=2.0,<2.3
+matplotlib
+altair
+plotly
+pydeck
+beautifulsoup4
+requests
+scikit-learn
+joblib
+peewee
+pyarrow>=15.0,<16.0
+protobuf>=3.20,<5.0
+jinja2
